@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10840.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10844.tgz',
      'xapian-core.tgz',
-     '168bfd897a9c439c923af6ec215324596c004c5a',
+     '1ad039c5e62273652ce2caf1dd9e9d1efa778986',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10840.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10844.tgz',
      'xapian-bindings.tgz',
-     '8a5278dccb0c575561177ea9ef8833b628d7c3f3',
+     '8b0476983f2934c7f55792ca907eef68e9238326',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10840.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10844.tgz',
      'win32msvc.tgz',
-     '66f3c6c741bc6c786b0813428d618ef0ca55d45b',
+     '3c6b3bae10dbc2185fd5644a150e65e579c6acc6',
      'xapian-core/win32',
     ),
 )
